[metadata]
name = django-pygmento
version = 0.1
license = BSD License
url = https://github.com/apoorvaeternity/django-pygmento
author = Apoorva Pandey
author_email = apoorvapandey365@gmail.com
description = django-pygmento is a syntax highlighter based on Pygments for django>=4.0.0
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any
keywords = syntax highlighter for django
classifiers =
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Source = https://github.com/apoorvaeternity/django-pygmento
    Bug Tracker = https://github.com/apoorvaeternity/django-pygmento/issues

[options]
packages = find:
include_package_data = true
python_requires = >=3.9
install_requires =
    Django >= 4.0.0
    pygments >= 2.11.2

[options.packages.find]
include =
    pygmento
    pygmento.*